# can-blackbox-skeleton

./: .gitignore  README.md  config.ini  config.ini.example  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: StreamManager_S3_업로드_가이드.md  개발계획.md  단계2_Virtual_CAN_검증.md  단계3_CAN_로깅_검증.md  단계4_폴더감시_검증.md  단계5_StreamManager_모킹.md  단계6_업로더_검증.md  단계7_저장소관리_검증.md  시스템사양서.md  업그레이드_계획_s3_file_uploader_참조.md  업그레이드_계획_단일파일_통합.md
scripts/: send_dummy_can.py  virtual_can_setup.sh
src/: __init__.py  can_logger.py  config_loader.py  directory_uploader.py  file_watcher.py  storage_manager.py  stream_manager_client.py  stream_manager_mock.py  stream_manager_real.py  uploader.py
tests/: __init__.py  conftest.py  test_can_logger.py  test_config_loader.py  test_directory_uploader.py  test_file_watcher.py  test_storage_manager.py  test_stream_manager_client.py  test_stream_manager_mock.py  test_uploader.py  test_virtual_can.py
